adding funding source and executive team to front page, adding spectra photo preview

--- a/public/elements/home-stats.html
+++ b/public/elements/home-stats.html
@@ -45,29 +45,67 @@
       <div id="added"></div>
     </div>
     
-    <div style="border-top: 1px solid #eee; padding: 25px 0; background: #f8f8f8">
+    <div style="border-top: 1px solid #eee; border-bottom: 1px solid #eee; padding: 25px 0; background: #f8f8f8">
       <div class="container">
-        <div class="col-md-4">
-          <h5>Contribute!</h5>
-          <div>
-            Want to contribute?  Visit <a href="http://data.ecosis.org" id="contributeLink">http://data.ecosis.org</a>.
+        <div class="row">
+          <div class="col-md-6">
+            <h5>Contribute!</h5>
+            <div>
+              Want to contribute?  Visit <a href="http://data.ecosis.org" id="contributeLink">http://data.ecosis.org</a> to add your dataset.
+            </div>
           </div>
-        </div>
-        <div class="col-md-4">
-          <h5>Need Help?</h5>
-          <div>
-            Visit the <a href="http://tutorial.ecosis.org" target="_blank">EcoSIS Tutorials</a>.
-          </div>
-        </div>
-        <div class="col-md-4">
-          <h5>Contact</h5>
-          <div>
-            <a href="mailto:info@ecosis.org">info@ecosis.org</a>: General EcoSIS questions and program information. <br />
-            <a href="mailto:help@ecosis.org">help@ecosis.org</a>: Technical help questions for EcoSIS applications and tools.
+          <div class="col-md-6">
+            <h5>Need Help?</h5>
+            <div>
+              Visit the <a href="http://tutorial.ecosis.org" target="_blank">EcoSIS Tutorials</a>. Or Contact:
+            </div>
+            <br />
+            <ul>
+              <li><a href="mailto:info@ecosis.org">info@ecosis.org</a><br />General EcoSIS questions and program information. </li>
+              <li><a href="mailto:help@ecosis.org">help@ecosis.org</a><br />Technical help questions for EcoSIS applications and tools. </li>
+            </ul>
           </div>
         </div>
       </div>
     </div>
+
+    <div class="container">
+        <div class="row" style="margin-top: 50px">
+          <div class="col-md-6">
+
+            <h5 style="border-bottom: 1px solid #eee; padding-bottom: 5px">Sponsor</h5>
+
+            <div class="media">
+              <div class="media-left">
+                <a href="#">
+                  <img class="media-object" src="/assets/NASA_logo.png" style="max-width: 96px" alt="NASA Logo">
+                </a>
+              </div>
+              <div class="media-body">
+                <h4 class="media-heading"><a href="https://www.nasa.gov/" target="_blank">NASA</a></h4>
+                <b>Program:</b> Research Opportunities in Space and Earth Sciences<br />
+                <b>Grant Number:</b> NNX13AK85A
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+
+            <h5 style="border-bottom: 1px solid #eee; padding-bottom: 5px">Executive Team</h5>
+            <div>
+              <a href="http://labs.russell.wisc.edu/townsend/" target="_blanl">University of Wisconsin - Madison, EnSpec</a><br />
+              <a href="http://www.cstars.ucdavis.edu/" target="_blanl">University of California - Davis, CSTARS</a><br />
+              <a href="https://sites.google.com/site/ucsbviperlab/" target="_blanl">University of California - Santa Barabara, VIPER Lab</a><br />
+              <a href="http://ursa.utah.edu/index.php" target="_blanl">University of Utah, URSA</a><br />
+              <a href="http://www.calmit.unl.edu/" target="_blanl">University of Nebraska - Lincoln, CALMIT</a><br />
+              <a href="http://www.jpl.nasa.gov/" target="_blanl">NASA, JPL</a><br />
+              <a href="http://www.neonscience.org/science-design/collection-methods/airborne-remote-sensing" target="_blanl">NEON</a>
+            </div>
+          </div>
+        </div>
+       </div>
+
+
+
 
 
   </template>
