--- a/public/elements/results/data-downloader.html
+++ b/public/elements/results/data-downloader.html
@@ -24,6 +24,7 @@
     <div class="row">
       <div class="col-sm-offset-2 col-sm-9">
         <a class="btn btn-primary btn-btn-lg" target="_blank" id="linkUrl"><i class="fa fa-download"></i> Download CSV</a>
+        <div class="help-block">Download EcoSIS dataset as a single .csv file</div>
       </div>
     </div>
   </template>
