--- a/public/elements/results/spectra-viewer.html
+++ b/public/elements/results/spectra-viewer.html
@@ -500,7 +500,7 @@
               }
               this.dataArray.splice(0,0,header);
           } else {
-              this.dataArray.splice(0,0,['Wavelength','Reflectance']);
+              this.dataArray.splice(0,0,['Wavelength','Value']);
           }
 
 
@@ -585,6 +585,8 @@
               tooltip: {isHtml: true}
           };
 
+
+
           if( this.label && this.label != '' ) {
               options.title = this.label;
           }
@@ -595,10 +597,10 @@
               options.vAxis.title = this.ylabel;
           }
 
-          /*options.animation = {
-              duration : 750,
-              easing : 'out'
-          }*/
+          if( this.packageData['Wavelength Units'] && this.packageData['Wavelength Units'].length === 1  ) {
+            options.hAxis.title = 'Wavelength ('+this.packageData['Wavelength Units'][0]+')';
+          }
+
 
           this.chart.draw(this.dt, options);
       },
