--- a/public/elements/results/data-downloader.html
+++ b/public/elements/results/data-downloader.html
@@ -12,7 +12,7 @@
         <div class="col-sm-9">
           <div class="checkbox">
             <label>
-              <input type="checkbox" id="metadata" on-change="update">  Include Metadata
+              <input type="checkbox" id="metadata" on-change="update">  Include Linked Ancillary Metadata
             </label>
           </div>
 
