--- a/public/elements/results/results-panel.html
+++ b/public/elements/results/results-panel.html
@@ -297,7 +297,14 @@
             table +=
               '<tr>'+
                 '<td class="elabel">EcoSIS DOI</td>'+
-                '<td>'+this.wrapFilterLinks('EcoSIS DOI', [ecosisDoi])+'</td>'+
+                '<td><a href="http://dx.doi.org/'+ecosisDoi+'" target="_blank">'+ecosisDoi+'</a></td>'+
+                '<td style="text-align:right"><help-popover description="EcoSIS assigned DOI"></help-popover></td>'
+              '</tr>';
+          } else if( item.name === 'Citation DOI' && this.result[item.name] ) {
+            table +=
+              '<tr>'+
+                '<td class="elabel">Dataset DOI</td>'+
+                '<td><a href="http://dx.doi.org/'+this.result[item.name][0]+'" target="_blank">'+this.result[item.name][0]+'</a></td>'+
                 '<td style="text-align:right"><help-popover description="EcoSIS assigned DOI"></help-popover></td>'
               '</tr>';
           } else {
