--- a/public/elements/results/spectra-viewer.html
+++ b/public/elements/results/spectra-viewer.html
@@ -54,6 +54,21 @@
         <div class="section">
           <h4>Select &amp; Filter Spectra</h4>
 
+
+
+          <div class="row" style="margin-top: 20px" id="filterPanel">
+            <div class="col-sm-2 col-sm-offset-1">Freeze Y-Axis</div>
+            <div class="col-sm-8">
+              <div style="padding: 5px; margin-bottom: 10px">
+                <input type="checkbox" on-change="_toggleFreezeYAxis" />
+                <span hidden$="[[!freezeYAxis]]" style="padding: 15px">
+                  Min <input type="number" style="width:100px" value="[[freezeYAxisMin]]" on-change="_setFreezeYAxisValue" value-type="Min" />
+                  Max <input type="number" style="width:100px" value="[[freezeYAxisMax]]" on-change="_setFreezeYAxisValue" value-type="Max" />
+                </span>
+              </div>
+            </div>
+          </div>
+
           <div class="row" id="spectraSliderRow">
             <div class="col-sm-2 col-sm-offset-1">Select</div>
             <div class="col-sm-8">
@@ -126,6 +141,19 @@
         },
         total : {
           type : String
+        },
+        freezeYAxis : {
+          type : Boolean,
+          value : false,
+          observer : '_onFreezeYAxis'
+        },
+        freezeYAxisMin : {
+          type : Number,
+          value : 0
+        },
+        freezeYAxisMax : {
+          type : Number,
+          value : 0
         }
       },
 
@@ -584,7 +612,13 @@
           if( this.showingStats ) arr = [];
           else arr = [this.dataArray[0]];
 
+          this.maxYValue = 0;
+
           for( var i = 1; i < this.dataArray.length; i++ ) {
+              if( this.dataArray[i][1] > this.maxYValue ) {
+                this.maxYValue = this.dataArray[i][1];
+              }
+
               if( this.dataArray[i][0] >= this.minWavelength &&
                   this.dataArray[i][0] <= this.maxWavelength ) {
 
@@ -627,7 +661,12 @@
               tooltip: {isHtml: true}
           };
 
-
+          if( this.freezeYAxis ) {
+            options.vAxis.viewWindow = {
+              min : parseFloat(this.freezeYAxisMin),
+              max : parseFloat(this.freezeYAxisMax)
+            }
+          }
 
           if( this.label && this.label != '' ) {
               options.title = this.label;
@@ -759,7 +798,27 @@
 
         var k = this.dataArray[e.row][2];
         this.$.hoverInfo.innerHTML = k.replace(/\n/g, ', ').replace(/, $/, '');
+      },
+
+      _onFreezeYAxis : function() {
+        if( this.freezeYAxis ) {
+          this.freezeYAxisMin = 0;
+          this.freezeYAxisMax = this.maxYValue;
+        }
+
+        this.redraw();
+      },
+
+      _toggleFreezeYAxis : function(e) {
+        this.freezeYAxis = e.currentTarget.checked;
+      },
+      
+      _setFreezeYAxisValue : function(e) {
+        this['freezeYAxis'+e.currentTarget.getAttribute('value-type')] = e.currentTarget.value;
+        this.redraw();
       }
+
+
     });
   </script>
 </dom-module>
