--- a/public/elements/results/results-panel.html
+++ b/public/elements/results/results-panel.html
@@ -99,14 +99,14 @@
         <div id="location" style="height:350px"></div>
         <div id="noLocation">No location information provided</div>
 
-        <div itemtype="http://schema.org/Organization" itemprop="provider" style="border-top: 1px solid #eee; margin-top: 100px">
+        <div itemtype="http://schema.org/Organization" itemprop="provider" style="border-top: 1px solid #eee; margin-top: 100px; margin-bottom: 20px">
           <h5 itemprop="name" style="margin-bottom: 0px">EcoSIS</h5>
           <div class="help-block" style="margin-bottom: 0px" itemprop="description">Ecosystem Spectral Information System</div>
           <div>
             <a href="https://ecosis.org" itemprop="url">https://ecosis.org</a> |
             <a href="http://cstars.github.io/ecosis/" target="_blank">EcoSIS API Documentation</a> |
-            <a href="mailto:info@ecosis.org" itemprop="email">info@ecospectra.org</a> |
-            <a href="mailto:help@ecospectra.org">help@ecospectra.org</a>
+            <a href="mailto:info@ecosis.org" itemprop="email">info@ecosis.org</a> |
+            <a href="mailto:help@ecosis.org">help@ecosis.org</a>
 
           </div>
         </div>
