fix for first event result firing before events loaded

--- a/public/elements/results/results-panel.html
+++ b/public/elements/results/results-panel.html
@@ -159,6 +159,10 @@
             }.bind(this)
           );
         }
+
+        if( window.firstResult ) {
+          this.render(window.firstResult);
+        }
       },
 
       setPanel : function(panel) {
