--- a/public/require.html
+++ b/public/require.html
@@ -11,13 +11,6 @@
 <script src="bower_components/js-md5/js/md5.js"></script>
 <script src="bower_components/bower-bootstrap-slider/js/bootstrap-slider.js"></script>
 
-<script type="text/javascript" src="js/app.js"></script>
-<script type="text/javascript" src="js/search.js"></script>
-<script type="text/javascript" src="js/map.js"></script>
-<script type="text/javascript" src="js/allFiltersPopup.js"></script>
-<script type="text/javascript" src="js/customFilterPopup.js"></script>
-<script type="text/javascript" src="js/lib.js"></script>
-
 <link rel="import" href="bower_components/polymer/polymer.html">
 <link rel="import" href="bower_components/iron-image/iron-image.html">
 
@@ -25,6 +18,19 @@
 <link rel="import" href="elements/results/results-panel.html">
 <link rel="import" href="elements/widgets/search-text-suggest.html">
 <link rel="import" href="elements/home-stats.html">
+
+<script>
+$(window).one('result-update-event', function(e, result){
+  window.firstResult = result;
+}.bind(this));
+</script>
+
+<script type="text/javascript" src="js/app.js"></script>
+<script type="text/javascript" src="js/search.js"></script>
+<script type="text/javascript" src="js/map.js"></script>
+<script type="text/javascript" src="js/allFiltersPopup.js"></script>
+<script type="text/javascript" src="js/customFilterPopup.js"></script>
+<script type="text/javascript" src="js/lib.js"></script>
 
 <script>
   window.appLoaded = true;
