wiring up client system and new build

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,17 +23,22 @@
   <link rel="apple-touch-icon" sizes="128x128" href="/assets/icon_128.png">
   <link rel="apple-touch-icon-precomposed" sizes="128x128" href="/assets/icon_128.png">
 
-  <script src="js/webcomponents.js"></script>
+
+  {{config}}
+
+  {{bundle}}
+
+  <!-- <script src="js/webcomponents.js"></script>
   <link rel="stylesheet" href="font-awesome/css/font-awesome.css">
   <script type="text/javascript" src="mqe/resources/mqe.js"></script>
-  <script type="text/javascript" src="/conf"></script>
+  <script type="text/javascript" src="/conf"></script> -->
   
   <script type="text/javascript" src="https://www.google.com/jsapi"></script>
   <script type="text/javascript">
       google.load('visualization', '1', {packages: ['corechart','line']});
   </script>
 
-  <link rel="import" href="require.html">
+  <!-- <link rel="import" href="require.html"> -->
 
 </head>
 <body resolved>
