--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,8 +11,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-  <link rel="shortcut icon" href="assets/favicon.ico" />
-  <link rel="manifest" href="manifest.json">
+  <link rel="shortcut icon" href="/assets/favicon.ico" />
+  <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#63A442">
 
   <meta name="description" content="EcoSIS, Ecological Spectral Information System, Spectral Library">
