adding seo integrations

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -45,5 +45,8 @@
 
   <ecosis-search></ecosis-search>
 
+  <script id="seo-jsonld" type="application/ld+json">
+    {{jsonld}}
+  </script>
 </body>
 </html>
