--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
+<!--[if lte IE 10]>
+<script type="text/javascript">
+  if ( document.URL.indexOf( 'ie' ) === -1 ) {
+    window.location = '/ie.html';
+  }
+</script>
+<![endif]-->
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <title>EcoSIS - Spectral Library</title>
 
@@ -42,6 +48,12 @@
   </style>
 </head>
 <body>
+
+  <noscript>
+    The EcoSIS Spectral Library requires JavaScript to
+    be enabled to view.  You have either disabled JavaScript or your
+    browser does not support it.
+  </noscript>
 
   <ecosis-search></ecosis-search>
 
